2005-02-15  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/client.py (Window.admin_connected_cb):
	Actually run the wizard, yo.

2005-02-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/parts.py:
	  some debug
	* flumotion/common/planet.py:
	  return a deferred list for empty() of state
	* flumotion/manager/manager.py:
	  order emptying correctly
	* flumotion/twisted/flavors.py:
	  return a deferred list for all observer updates on state
	  make a copy of list when removing

2005-02-15  Andy Wingo  <wingo@pobox.com>

	* data/glade/greeter-initial.glade: Reword some things.

	* flumotion/admin/gtk/greeter.py (LoadConnection.title): Change to
	"Recent connections".

	* flumotion/component/producers/webcam/admin_gtk.py
	(WebcamAdminGtk.setup): Pass the state as the first arg, not the
	name.

	* flumotion/admin/gtk/client.py (Window.start_stop_notify_cb):
	Move clear_all updating here from
	_set_stop_start_component_sensitive.

2005-02-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/manager.py:
	* flumotion/test/test_manager_manager.py:
	  create a graph of component dependencies

2005-02-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/manager.py:
	* flumotion/test/test_manager_manager.py:
	  revert change to emptyPlanet until we refactor manager code

2005-02-15  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py (Vishnu.emptyPlanet): Simplify
	because we require that all of the components be sleeping already.

	* flumotion/admin/gtk/client.py (Window.manage_start_all_cb): New
	callback.
	(Window.manage_stop_all_cb): Implement via a simple "for x in
	l..." idiom instead of emptyPlanet().
	(Window.manage_clear_all_cb): New callback, uses
	cleanComponents->emptyPlanet.

	* data/glade/admin.glade: Add a clear-all menu button.

	* flumotion/admin/gtk/client.py (Window.current_component_state):